--- a/app/globals.css
+++ b/app/globals.css
@@ -29,32 +29,6 @@
     --color-error: hsl(5 88% 65%);
     --color-error-content: hsl(0 0% 100%);
   }
-  .contrast {
-    --color-primary: hsl(53, 79%, 48%);
-    --color-primary-focus: hsl(238 33% 07%);
-    --color-primary-content: hsl(0 0% 100%);
-    --color-secondary: rgb(32, 185, 202);
-    --color-secondary-focus: hsl(261 49% 23%);
-    --color-secondary-content: hsl(0 0% 100%);
-    --color-accent: hsl(187 42% 46%);
-    --color-accent-focus: hsl(187 42% 36%);
-    --color-accent-content: hsl(0 0% 100%);
-    --color-neutral: hsl(261 49% 33%);
-    --color-neutral-focus: hsl(261 49% 23%);
-    --color-neutral-content: hsl(0 0% 100%);
-    --color-base-100: hsl(238 25% 21%);
-    --color-base-200: hsl(238, 33%, 16%);
-    --color-base-300: hsl(238, 33%, 11%);
-    --color-base-content: hsl(0 0% 100%);
-    --color-info: hsl(261 49% 33%);
-    --color-info-content: hsl(0 0% 100%);
-    --color-success: hsl(261 49% 33%);
-    --color-success-content: hsl(0 0% 100%);
-    --color-warning: hsl(31 76% 57%);
-    --color-warning-content: hsl(0 0% 100%);
-    --color-error: hsl(5 88% 65%);
-    --color-error-content: hsl(0 0% 100%);
-  }
   .dark {
     --color-primary: hsl(238, 33%, 17%);
     --color-primary-focus: hsl(238 33% 07%);
@@ -79,6 +53,32 @@
     --color-warning: hsl(31 76% 57%);
     --color-warning-content: hsl(0 0% 100%);
     --color-error: hsl(5 88% 65%);
+    --color-error-content: hsl(0 0% 100%);
+  }
+  .pink {
+    --color-primary: hsl(0 100% 50%);
+    --color-primary-focus: hsl(0 100% 40%);
+    --color-primary-content: hsl(0 0% 100%);
+    --color-secondary: hsl(0 100% 50%);
+    --color-secondary-focus: hsl(0 100% 40%);
+    --color-secondary-content: hsl(0 0% 100%);
+    --color-accent: hsl(0 100% 50%);
+    --color-accent-focus: hsl(0 100% 40%);
+    --color-accent-content: hsl(0 0% 100%);
+    --color-neutral: hsl(0 100% 50%);
+    --color-neutral-focus: hsl(0 100% 40%);
+    --color-neutral-content: hsl(0 0% 100%);
+    --color-base-100: hsl(0 100% 50%);
+    --color-base-200: hsl(0 100% 40%);
+    --color-base-300: hsl(0 100% 30%);
+    --color-base-content: hsl(0 0% 100%);
+    --color-info: hsl(0 100% 50%);
+    --color-info-content: hsl(0 0% 100%);
+    --color-success: hsl(0 100% 50%);
+    --color-success-content: hsl(0 0% 100%);
+    --color-warning: hsl(0 100% 50%);
+    --color-warning-content: hsl(0 0% 100%);
+    --color-error: hsl(0 100% 50%);
     --color-error-content: hsl(0 0% 100%);
   }
 }
@@ -127,14 +127,14 @@ a {
   }
 
   .btn-error {
-    @apply text-error hover:underline ;
+    @apply text-error hover:underline;
   }
 
   .btn-link {
     @apply text-accent;
   }
 
-  .btn svg{
+  .btn svg {
     width: 1rem;
     height: 1rem;
     margin-right: 0.5rem;
