Unistalled next-thems and fixed theme switch

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,82 +4,82 @@
 
 @layer base {
   :root {
-    --color-primary: hsl(238, 33%, 17%);
-    --color-primary-focus: hsl(238 33% 07%);
-    --color-primary-content: hsl(0 0% 100%);
-    --color-secondary: hsl(261 49% 33%);
-    --color-secondary-focus: hsl(261 49% 23%);
-    --color-secondary-content: hsl(0 0% 100%);
-    --color-accent: hsl(187 42% 46%);
-    --color-accent-focus: hsl(187 42% 36%);
-    --color-accent-content: hsl(0 0% 100%);
-    --color-neutral: hsl(0 0% 95%);
-    --color-neutral-focus: hsl(0 0% 85%);
-    --color-neutral-content: hsl(0 0% 10%);
-    --color-base-100: hsl(0 0% 100%);
-    --color-base-200: hsl(0 0% 85%);
-    --color-base-300: hsl(0 0% 70%);
-    --color-base-content: hsl(0 0% 10%);
-    --color-info: hsl(261 49% 33%);
-    --color-info-content: hsl(0 0% 100%);
-    --color-success: hsl(261 49% 33%);
-    --color-success-content: hsl(0 0% 100%);
-    --color-warning: hsl(31 76% 57%);
-    --color-warning-content: hsl(0 0% 100%);
-    --color-error: hsl(5 88% 65%);
-    --color-error-content: hsl(0 0% 100%);
+    --color-primary: 238 33% 17%;
+    --color-primary-focus: 238 33% 07%;
+    --color-primary-content: 0 0% 100%;
+    --color-secondary: 261 49% 33%;
+    --color-secondary-focus: 261 49% 23%;
+    --color-secondary-content: 0 0% 100%;
+    --color-accent: 187 42% 46%;
+    --color-accent-focus: 187 42% 36%;
+    --color-accent-content: 0 0% 100%;
+    --color-neutral: 0 0% 95%;
+    --color-neutral-focus: 0 0% 85%;
+    --color-neutral-content: 0 0% 10%;
+    --color-base-100: 0 0% 100%;
+    --color-base-200: 0 0% 85%;
+    --color-base-300: 0 0% 70%;
+    --color-base-content: 0 0% 10%;
+    --color-info: 261 49% 33%;
+    --color-info-content: 0 0% 100%;
+    --color-success: 261 49% 33%;
+    --color-success-content: 0 0% 100%;
+    --color-warning: 31 76% 57%;
+    --color-warning-content: 0 0% 100%;
+    --color-error: 5 88% 65%;
+    --color-error-content: 0 0% 100%;
   }
   .dark {
-    --color-primary: hsl(238, 33%, 17%);
-    --color-primary-focus: hsl(238 33% 07%);
-    --color-primary-content: hsl(0 0% 100%);
-    --color-secondary: hsl(261 49% 33%);
-    --color-secondary-focus: hsl(261 49% 23%);
-    --color-secondary-content: hsl(0 0% 100%);
-    --color-accent: hsl(187 42% 46%);
-    --color-accent-focus: hsl(187 42% 36%);
-    --color-accent-content: hsl(0 0% 100%);
-    --color-neutral: hsl(261 49% 33%);
-    --color-neutral-focus: hsl(261 49% 23%);
-    --color-neutral-content: hsl(0 0% 100%);
-    --color-base-100: hsl(238 25% 21%);
-    --color-base-200: hsl(238, 33%, 16%);
-    --color-base-300: hsl(238, 33%, 11%);
-    --color-base-content: hsl(0 0% 100%);
-    --color-info: hsl(261 49% 33%);
-    --color-info-content: hsl(0 0% 100%);
-    --color-success: hsl(261 49% 33%);
-    --color-success-content: hsl(0 0% 100%);
-    --color-warning: hsl(31 76% 57%);
-    --color-warning-content: hsl(0 0% 100%);
-    --color-error: hsl(5 88% 65%);
-    --color-error-content: hsl(0 0% 100%);
+    --color-primary: 238 33% 17%;
+    --color-primary-focus: 238 33% 07%;
+    --color-primary-content: 0 0% 100%;
+    --color-secondary: 261 49% 33%;
+    --color-secondary-focus: 261 49% 23%;
+    --color-secondary-content: 0 0% 100%;
+    --color-accent: 187 42% 46%;
+    --color-accent-focus: 187 42% 36%;
+    --color-accent-content: 0 0% 100%;
+    --color-neutral: 261 49% 33%;
+    --color-neutral-focus: 261 49% 23%;
+    --color-neutral-content: 0 0% 100%;
+    --color-base-100: 238 25% 21%;
+    --color-base-200: 238 33% 16%;
+    --color-base-300: 238 33% 11%;
+    --color-base-content: 0 0% 100%;
+    --color-info: 261 49% 33%;
+    --color-info-content: 0 0% 100%;
+    --color-success: 261 49% 33%;
+    --color-success-content: 0 0% 100%;
+    --color-warning: 31 76% 57%;
+    --color-warning-content: 0 0% 100%;
+    --color-error: 5 88% 65%;
+    --color-error-content: 0 0% 100%;
   }
-  .pink {
-    --color-primary: hsl(0 100% 50%);
-    --color-primary-focus: hsl(0 100% 40%);
-    --color-primary-content: hsl(0 0% 100%);
-    --color-secondary: hsl(0 100% 50%);
-    --color-secondary-focus: hsl(0 100% 40%);
-    --color-secondary-content: hsl(0 0% 100%);
-    --color-accent: hsl(0 100% 50%);
-    --color-accent-focus: hsl(0 100% 40%);
-    --color-accent-content: hsl(0 0% 100%);
-    --color-neutral: hsl(0 100% 50%);
-    --color-neutral-focus: hsl(0 100% 40%);
-    --color-neutral-content: hsl(0 0% 100%);
-    --color-base-100: hsl(0 100% 50%);
-    --color-base-200: hsl(0 100% 40%);
-    --color-base-300: hsl(0 100% 30%);
-    --color-base-content: hsl(0 0% 100%);
-    --color-info: hsl(0 100% 50%);
-    --color-info-content: hsl(0 0% 100%);
-    --color-success: hsl(0 100% 50%);
-    --color-success-content: hsl(0 0% 100%);
-    --color-warning: hsl(0 100% 50%);
-    --color-warning-content: hsl(0 0% 100%);
-    --color-error: hsl(0 100% 50%);
-    --color-error-content: hsl(0 0% 100%);
+  .fire {
+    --color-primary: 0 100% 50%;
+    --color-primary-focus: 0 100% 40%;
+    --color-primary-content: 0 0% 100%;
+    --color-secondary: 0 100% 50%;
+    --color-secondary-focus: 0 100% 40%;
+    --color-secondary-content: 0 0% 100%;
+    --color-accent: 0 100% 50%;
+    --color-accent-focus: 0 100% 40%;
+    --color-accent-content: 0 0% 100%;
+    --color-neutral: 0 100% 50%;
+    --color-neutral-focus: 0 100% 40%;
+    --color-neutral-content: 0 0% 100%;
+    --color-base-100: 0 100% 50%;
+    --color-base-200: 0 100% 40%;
+    --color-base-300: 0 100% 30%;
+    --color-base-content: 0 0% 100%;
+    --color-info: 0 100% 50%;
+    --color-info-content: 0 0% 100%;
+    --color-success: 0 100% 50%;
+    --color-success-content: 0 0% 100%;
+    --color-warning: 0 100% 50%;
+    --color-warning-content: 0 0% 100%;
+    --color-error: 0 100% 50%;
+    --color-error-content: 0 0% 100%;
   }
 }
 
