--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,29 +103,29 @@
 @layer components {
   /* btn styles */
   .btn {
-    @apply inline-flex items-center rounded-md border border-transparent px-4 py-1.5 text-xs font-medium focus:outline-none;
+    @apply inline-flex h-8 items-center rounded-md border border-transparent px-2 py-1.5 text-xs font-medium focus:outline-none;
   }
 
   .btn-primary {
-    @apply border-secondary bg-secondary text-secondary-content shadow-sm hover:border-secondary-focus 
+    @apply h-8 border-secondary bg-secondary text-secondary-content shadow-sm hover:border-secondary-focus 
       hover:bg-secondary-focus focus:bg-secondary-focus;
   }
 
   .btn-primary-accent {
-    @apply border-accent bg-accent text-accent-content shadow-sm hover:border-accent-focus
+    @apply h-8 border-accent bg-accent text-accent-content shadow-sm hover:border-accent-focus
      hover:bg-accent-focus focus:bg-accent-focus;
   }
 
   .btn-secondary {
-    @apply border-base-content border-opacity-80 bg-base-100 text-neutral-content shadow-sm hover:bg-base-200;
+    @apply h-8 border-base-content border-opacity-80 bg-base-100 text-neutral-content shadow-sm hover:bg-base-200;
   }
 
   .btn-primary-accent-light {
-    @apply grid place-content-center rounded-lg bg-accent bg-opacity-10 text-xs text-accent hover:bg-accent-focus hover:bg-opacity-20;
+    @apply grid h-8 place-content-center rounded-lg bg-accent bg-opacity-10 text-xs text-accent hover:bg-accent-focus hover:bg-opacity-20;
   }
 
   .btn-error {
-    @apply text-error hover:underline;
+    @apply h-8 text-error hover:underline;
   }
 
   .btn-link {
