--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,10 +141,10 @@
 
   /* auth styles */
   .auth-form {
-    @apply flex w-auto flex-col rounded-md bg-white p-8 shadow-lg;
+    @apply flex w-auto min-w-[28rem] flex-col rounded-[4px] bg-white p-8 shadow-xl relative top-5 z-10;
   }
 
   .auth-input {
-    @apply w-full px-3 py-2 text-base text-neutral-content placeholder-neutral-content bg-base-100 border border-base-200 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent;
+    @apply w-full px-6 py-4 my-2 text-base border border-[#482B7C] rounded-sm outline-none focus:outline-none placeholder-[#482B7C];
   }
 }
